--- a/rsp/templates/accounts/login.html
+++ b/rsp/templates/accounts/login.html
@@ -13,6 +13,9 @@
                 <i class="fas fa-sign-in-alt"></i> Login</h4>
             </div>
             <div class="card-body">
+
+                <!-- {% include 'partials/_alerts.html' %} -->
+
                 <form action="{% url 'login' %}" method="POST">
                     {% csrf_token %}
                 <div class="form-group">
