--- a/rsp/templates/accounts/register.html
+++ b/rsp/templates/accounts/register.html
@@ -12,6 +12,9 @@
               <h4>
                 <i class="fas fa-user-plus"></i> Register</h4>
             </div>
+
+            <!-- {% include 'partials/_alerts.html' %} -->
+
             <div class="card-body">
                 <form action="{% url 'register' %}" method="POST">
                     {% csrf_token %}
