--- a/rsp/templates/partials/_alerts.html
+++ b/rsp/templates/partials/_alerts.html
@@ -1,4 +1,4 @@
-<!-- 
+
 {% if messages %}
     {% for message in messages %}
         <div id="message" class="container">
@@ -8,11 +8,11 @@
                     {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                         Error
                     {% else %}
-                        {% message.tags|title %}
+   
                     {% endif %}
                 </strong>
                 {{ message }}
             </div>
         </div>
     {% endfor %}
-{% endif %} -->
+{% endif %} 
