--- a/rsp/templates/accounts/dashboard.html
+++ b/rsp/templates/accounts/dashboard.html
@@ -8,7 +8,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">User Dashboard</h1>
-          <p class="lead">Manage your BT Real Estate account</p>
+          <p class="lead">Manage your <span style="color: red; background:yellow;font-weight:bold;">S<span style="color: blue;">Module</span></span> Real Estate account</p>
         </div>
       </div>
     </div>
@@ -20,7 +20,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="index.html">
+            <a href="{% url 'index' %}">
               <i class="fas fa-home"></i> Home</a>
           </li>
           <li class="breadcrumb-item active"> Dashboard</li>
