--- a/rsp/templates/partials/_footer.html
+++ b/rsp/templates/partials/_footer.html
@@ -1,5 +1,5 @@
       <!-- Footer -->
       <footer id="main-footer" class="py-4 bg-primary text-white text-center">
         Copyright &copy;
-        <span class="year"></span> SModule Real Estate
+        <span class="year"></span> <span style="color: red; background:yellow;font-weight:bold;">S<span style="color: blue;">Module</span></span> Real Estate
     </footer>
