--- a/rsp/templates/partials/_navbar.html
+++ b/rsp/templates/partials/_navbar.html
@@ -41,28 +41,54 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
-        <li 
-            {% if '/register' in request.path %}
-                class="nav-item active mr-3"
-            {% else %}
-                class="nav-item mr-3"
-            {% endif %}
-        >
-            <a class="nav-link" href="{% url 'register' %}">
-            <i class="fas fa-user-plus"></i> Register</a>
-        </li>
-        <li 
-            {% if '/login' in request.path %}
-                class="nav-item active mr-3"
-            {% else %}
-                class="nav-item mr-3"
-            {% endif %}
-        >
-            <a class="nav-link" href="{% url 'login' %}">
-            <i class="fas fa-sign-in-alt"></i>
+            {% if user.is_authenticated %}
+                <li 
+                {% if '/dashboard' in request.path %}
+                    class="nav-item active mr-3"
+                {% else %}
+                    class="nav-item mr-3"
+                {% endif %}
+            >
+                <a class="nav-link" href="{% url 'dashboard' %}"></i> Welcome {{user.username}} (Dashboard)</a>
+            </li>
+            <li class="nav-item mr-3">
+                <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                    <i class="fas fa-sign-out-alt"></i>logout
+                </a>
+                <form action="{% url 'logout' %}" method="POST" id="logout" >
+                    {% csrf_token %}
+                    <input type="hidden">
+                </form>
+            </li>
 
-            Login</a>
-        </li>
+
+
+            {% else %}
+                <li 
+                    {% if '/register' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}
+                >
+                    <a class="nav-link" href="{% url 'register' %}">
+                    <i class="fas fa-user-plus"></i> Register</a>
+                </li>
+                <li 
+                    {% if '/login' in request.path %}
+                        class="nav-item active mr-3"
+                    {% else %}
+                        class="nav-item mr-3"
+                    {% endif %}
+                >
+                    <a class="nav-link" href="{% url 'login' %}">
+                    <i class="fas fa-sign-in-alt"></i>
+
+                    Login</a>
+                </li>
+            {% endif %}
+
+        
         </ul>
     </div>
     </div>
