--- a/rsp/templates/listings/search.html
+++ b/rsp/templates/listings/search.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load humanize %}
 
+{% block title %} | Search Result {% endblock %}
 {% block content %}
     
 <section id="showcase-inner" class="showcase-search text-white py-5">
