--- a/rsp/templates/accounts/dashboard.html
+++ b/rsp/templates/accounts/dashboard.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} | Dashboard {% endblock %}
 {% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
