--- a/rsp/templates/accounts/login.html
+++ b/rsp/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} | Login {% endblock %}
 {% block content %}
 
 <section id="login" class="bg-light py-5">
