--- a/rsp/templates/accounts/register.html
+++ b/rsp/templates/accounts/register.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+{% block title %} | Register {% endblock %}
 {% block content %}
 
 <section id="register" class="bg-light py-5">
