--- a/rsp/templates/base.html
+++ b/rsp/templates/base.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-  <title>SModule Real Estate</title>
+  <title>SModule Real Estate {% block title %} {% endblock %}</title>
 </head>
   <body>
       <!-- Top Bar -->
