--- a/rsp/templates/listings/listings.html
+++ b/rsp/templates/listings/listings.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load humanize %}
 
+
+{% block title %} | Listings {% endblock %}
 {% block content %}
     
 <section id="showcase-inner" class="py-5 text-white">
