--- a/rsp/templates/pages/about.html
+++ b/rsp/templates/pages/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %} | About Us {% endblock %}
 {% block content %}
 
     <section id="showcase-inner" class="py-5 text-white">
