--- a/rsp/templates/accounts/register.html
+++ b/rsp/templates/accounts/register.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-user-plus"></i> Register</h4>
             </div>
 
-            <!-- {% include 'partials/_alerts.html' %} -->
+            {% include 'partials/_alerts.html' %}
 
             <div class="card-body">
                 <form action="{% url 'register' %}" method="POST">
