--- a/rsp/templates/pages/index.html
+++ b/rsp/templates/pages/index.html
@@ -6,6 +6,8 @@
 {% block title %} | Home {% endblock %}
 
 {% block content %}
+
+{% include 'partials/_alerts.html' %}
  <!-- Showcase -->
  <section id="showcase">
     <div class="container text-center">
