--- a/rsp/templates/accounts/dashboard.html
+++ b/rsp/templates/accounts/dashboard.html
@@ -14,7 +14,7 @@
       </div>
     </div>
   </section>
-
+  {% include 'partials/_alerts.html' %}
   <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
     <div class="container">
